--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <link
     href="https://fonts.googleapis.com/css2?family=Mulish:wght@600;700;900&display=swap"
-    rel="stylesheet"
-  />
+    rel="stylesheet" />
+
+    <link rel="stylesheet" href="estilos/media-query.css">    
+ 
 </head>
 <body>
     <section id="grup" >
@@ -67,7 +69,8 @@
 
                                       <div class="input-wapper">
                                             <input type="email"  id="email" placeholder="Email">
-                                            <img src="img/Vector (2).png" alt="">
+                                            <img class="vector2
+                                            " src="img/Vector (2).png" alt="">
                                      </div>
                                         <div class="input-wapper">
                                             <textarea placeholder  ="Digite sua mensagem aqui..." ></textarea>
